# FHook

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/eighteengray/fhook/: MainActivity.java  TestActivity.java
app/src/main/res/values/: strings.xml
artmethodhook/: CMakeLists.txt
artmethodhook/src/main/: AndroidManifest.xml
artmethodhook/src/main/cpp/: common.h
asmlibrary/src/main/: AndroidManifest.xml
asmplugin/: build.gradle
asmplugin/asm-plugin/com/eighteengray/asmplugin/asmplugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
asmplugin/asm-plugin/com/eighteengray/asmplugin/asmplugin/0.0.1/: asmplugin-0.0.1.jar.md5  asmplugin-0.0.1.jar.sha1  asmplugin-0.0.1.pom  asmplugin-0.0.1.pom.md5  asmplugin-0.0.1.pom.sha1
asmplugin/src/main/groovy/com/eighteengray/asmplugin/: AsmPlugin.groovy
asmplugin/src/main/java/com/eighteengray/asmplugin/: AsmClassVisitor.java  AsmOnCreateMethodVisitor.java  AsmOnDestroyMethodVisitor.java
elfhook/: CMakeLists.txt  build.gradle
elfhook/src/main/: AndroidManifest.xml
elfhook/src/main/cpp/elfhook1/: CMakeLists.txt  common.h  main.cpp
elfhook/src/main/cpp/elfhook2/: CMakeLists.txt  elf_reader.cpp  logger.h  tools.cpp
elfhook/src/main/cpp/elfhook3/: CMakeLists.txt  elf_module.cpp  elf_module.h
elfhook/src/main/cpp/xHook/: CMakeLists.txt  xh_jni.c
elfhook/src/main/cpp/xhookapply/: CMakeLists.txt  xhookapply.c
elfhook/src/main/java/com/eighteengray/elfhook/: XHook.java  XHookActivity.java  XHookApply.java
elfhook/src/main/res/layout/: activity_main.xml
javahooklibrary/src/main/: AndroidManifest.xml
javahooklibrary/src/main/res/values/: strings.xml
memorylibrary/: CMakeLists.txt
memorylibrary/src/main/: AndroidManifest.xml
memorylibrary/src/main/aidl/com/eighteengray/memorylibrary/: IMemoryFIleAidlInterface.aidl
memorylibrary/src/main/cpp/: com_example_ashmem_JNIInterface.c  com_example_ashmem_JNIInterface.h  shmem.cpp
memorylibrary/src/main/cpp/shm/: shmem.cpp
memorylibrary/src/main/cpp/shm/example/: map_normalfile1.c
memorylibrary/src/main/java/com/eighteengray/memorylibrary/: MemoryFetchService.java  memoryUtils.java
nativehooklibrary/: CMakeLists.txt  build.gradle
nativehooklibrary/src/main/: AndroidManifest.xml
nativehooklibrary/src/main/cpp/: common.h  main.cpp
nativehooklibrary/src/main/java/com/eighteengray/nativehook/: HookActivity.java  HookUtils.java
nativehooklibrary/src/main/res/layout/: activity_main.xml
nativehooklibrary/src/main/res/values/: strings.xml
ptracehook/: CMakeLists.txt  build.gradle
ptracehook/src/main/: AndroidManifest.xml
ptracehook/src/main/cpp/ptracehook/inlinehook/: CMakeLists.txt  Ihook.c  Ihook.h
ptracehook/src/main/cpp/ptracehook/ptracehook1/: CMakeLists.txt  def.h  logger.h  main.cpp  tools.cpp  tools.h  tracer.cpp
ptracehook/src/main/cpp/ptracehook/ptracehook3/: CMakeLists.txt  Inject.c  Inject.h  Log.c  Log.h  Tools.c  Tools.h
sharedmemory/: build.gradle
sharedmemory/src/main/cpp/mmap/: mmap.c
sharedmemory/src/main/cpp/shm/: shmem.cpp
sharedmemory/src/main/cpp/shm/example/: map_normalfile2.c  mmap_attr.c  parentchildprocess.c
sharedmemory/src/main/res/values/: strings.xml
